<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- Authentication Flow -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.freevibes.android.ui.auth.LoginFragment"
        android:label="@string/auth_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.freevibes.android.ui.auth.RegisterFragment"
        android:label="@string/auth_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_register_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Main App Flow -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.freevibes.android.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_player"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_home_to_playlist"
            app:destination="@id/playlistFragment" />
        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.freevibes.android.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_player"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_search_to_playlist"
            app:destination="@id/playlistFragment" />
    </fragment>

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.freevibes.android.ui.library.LibraryFragment"
        android:label="@string/nav_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_library_to_playlist"
            app:destination="@id/playlistFragment" />
        <action
            android:id="@+id/action_library_to_player"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_library_to_search"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.freevibes.android.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_profile_to_library"
            app:destination="@id/libraryFragment" />
    </fragment>

    <!-- Player -->
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.freevibes.android.ui.player.PlayerFragment"
        android:label="Player"
        tools:layout="@layout/fragment_player">
        <argument
            android:name="trackId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="playlistId"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <!-- Playlist Detail -->
    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.freevibes.android.ui.playlist.PlaylistFragment"
        android:label="Playlist"
        tools:layout="@layout/fragment_playlist">
        <argument
            android:name="playlistId"
            app:argType="string" />
        <action
            android:id="@+id/action_playlist_to_player"
            app:destination="@id/playerFragment" />
    </fragment>

    <!-- Global Actions -->
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />
    
    <action
        android:id="@+id/action_global_homeFragment"
        app:destination="@id/homeFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

</navigation>